--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -1,5 +1,9 @@
 body {
   background-color: #000;
+  font-family: 'PT Sans', sans-serif;
+}
+h2, h3 {
+  font-family: 'PT Sans Narrow', sans-serif;
 }
 .to_color {
   color: #fc481a;
@@ -7,7 +11,7 @@ body {
 
 
 .header {
-  background: #000 url("../i/bg-header.png") no-repeat 50% 0;
+  background: #000 url("../i/bg_header.png") no-repeat 50% 0;
   color: #fff;
   padding-top: 20px;
 }
@@ -42,7 +46,7 @@ body {
   .header_bottom {
     &__title {
       .h1 {
-        font-size: 60px;
+        font-size: 55px;
         font-family: 'Roboto Condensed', sans-serif;
         font-weight: bold;
         text-transform: uppercase;
@@ -57,15 +61,160 @@ body {
       &__title {
         font-size: 22px;
       }
+      &__advantages {
+        list-style: none;
+        padding: 0;
+
+        li {
+          padding: 7px 0 7px 35px;
+          background: url(../i/mark_b.png) no-repeat 0 50%;
+        }
+      }
+    }
+    .sale {
+      flex-direction: column;
+      justify-content: flex-end;
+      display: flex;
+      margin-bottom: 65px;
+      font-family: 'PT Sans Narrow', sans-serif;
+
+      p {
+        text-align: center;
+        margin-top: 10px;
+      }
+    }
+    .timer {
+      display: inline-flex;
+
+      .timer-title {
+        width: 130px;
+        height: 62px;
+        padding: 7px;
+        margin-left: 5px;
+        border-radius: 6px;
+        background: rgba(0, 0, 0, 0.5);
+      }
+    }
+    .form {
+      position: relative;
+      font-family: 'PT Sans Narrow', sans-serif;
+      background: #fff;
+      margin-top: 30px;
+      border-radius: 12px;
+      overflow: hidden;
+
+      .form__price {
+        display: flex;
+        padding: 20px;
+        position: absolute;
+        top: -5%;
+        left: -25%;
+        width: 150%;
+        height: 130px;
+        background: linear-gradient(180deg,#a84523,#431309);
+        border-radius: 50%;
+
+        .form__full-price {
+          position: relative;
+          top: 13px;
+          left: 73px;
+          color: #866057;
+
+          p {
+            margin: 0;
+          }
+
+          .old-price {
+            color: #866057;
+            font-size: 44px;
+            line-height: 1;
+            text-decoration: line-through;
+          }
+
+          .rubles {
+            color: #866057;
+            font-size: 24px;
+          }
+
+        }
+        .form__discount-price {
+          position: relative;
+          top: 13px;
+          left: 110px;
+
+          p {
+            margin: 0;
+          }
+
+          .new-price {
+            font-size: 44px;
+            line-height: 1;
+          }
+
+          .rubles {
+            font-size: 24px;
+          }
+        }
+      }
+      .form-body {
+        margin-top: 130px;
+
+        .form-group {
+          padding: 0 20px 15px;
+          margin: 0;
+
+          .form-control {
+            padding: 14px;
+          }
+        }
+
+        .form_button {
+          display: block;
+          color: #fff;
+          margin: 5px 20px 15px;
+          font-size: 22px;
+          font-weight: bold;
+          border-radius: 5px;
+          text-decoration: none;
+          text-transform: uppercase;
+          background: linear-gradient(180deg,#d73f17,#fa4a1b);
+
+          &__mark {
+            padding: 14px 20px;
+            position: absolute;
+            display: inline-block;
+            width: 50px;
+            height: 60px;
+            background: #b13412;
+            border-radius: 5px 0 0 5px;
+          }
+          &__text {
+            text-align: center;
+            display: block;
+            padding: 13px 0 14px 45px;
+          }
+        }
+      }
+      &__protection {
+        color: #000;
+        padding: 0 20px;
+        font-size: 15px;
+
+        svg {
+          margin: 0 3px 7px 5px;
+        }
+      }
     }
   }
 
 .main {
   .block_2 {
-    background: #000 url("../i/bg_block2.png") no-repeat 50% 120%;
+    background: #000 url("../i/bg_block2.png") no-repeat 50% 70%;
     text-align: center;
     font-size: 22px;
     color: #fff;
+    margin-top: 30px;
+    margin-bottom: 65px;
 
     &__title {
       .h2 {
@@ -84,7 +233,7 @@ body {
       background: #fff;
       border-radius: 8px;
       color: #000;
-      margin: 0 auto 65px;
+      margin: 0 auto;
 
       .number {
         display: inline-flex;
@@ -97,6 +246,44 @@ body {
         background: #e5e5e5;
         margin-right: 15px;
       }
+
+      .button_1,
+      .button_2 {
+        position: relative;
+        font-size: 24px;
+        font-weight: 700;
+        color: #fff;
+        text-transform: uppercase;
+        padding: 20px 50px;
+        display: inline-block;
+        margin: 0 10px 10px;
+        border: 2px solid #fc6d48;
+        border-radius: 12px;
+        background: #fc481a;
+        text-decoration: none;
+        transition: .5s;
+        overflow: hidden;
+
+        .imposed {
+          position: absolute;
+          top: -45%;
+          left: -25%;
+          right: 0;
+          bottom: 0;
+          width: 150%;
+          height: 100%;
+          background: #fff;
+          opacity: .2;
+          border-radius: 50%;
+        }
+
+        &:hover {
+          color: #000;
+          background: #fff;
+        }
+      }
+
+
 
       .h3 {
          font-size: 24px;
@@ -119,7 +306,7 @@ body {
     &__content {
       width: 100%;
       max-width: 598px;
-      font-size: 16px;
+      font-size: 17px;
       padding-left: 40px;
 
       .caption {
@@ -129,6 +316,7 @@ body {
     }
 
     .h2 {
+      max-width: 650px;
       margin-top: 30px;
       padding-left: 40px;
       font-weight: 550;
@@ -138,13 +326,15 @@ body {
 
   }
   .block_4 {
-    background: #000 url("../i/bg_block4.png") no-repeat 50% 50%;
-    margin: 0 auto 65px;
+    background: #000 url(../i/bg_block4.png) no-repeat -31% 109%;
+    margin: 0 auto;
+    padding-bottom: 65px;
+    box-shadow: inset 15px 0px 15px -2px rgba(0,0,0,0.93);
 
     &__product {
-      img {
-        width: 100%;
-      }
+      background: url("../i/product_n.png") no-repeat 50% 50%;
+      width: 100%;
+      height: 100%;
     }
     &__advantages {
       display: flex;
@@ -152,17 +342,21 @@ body {
       justify-content: space-around;
       padding: 0;
 
-      .card {
+      .advantages_item {
         width: 30%;
         min-width: 200px;
         background: #fff;
-        border-radius: 8px;
+        border-radius: 12px;
         margin-bottom: 15px;
 
-        .card-text {
+        .advantages_text {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           text-align: center;
           font-weight: bold;
           margin: 5px auto;
+          min-height: 72px;
         }
       }
     }
@@ -203,7 +397,9 @@ body {
       font-weight: 550;
       letter-spacing: -3px;
       text-transform: uppercase;
+      margin-bottom: 15px;
     }
   }
 
 }
+
