--- a/src/assets/sass/fonts.sass
+++ b/src/assets/sass/fonts.sass
@@ -1,1 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=cyrillic');
