--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -1,5 +1,4 @@
 // Grid containers
-
 $container-max-widths: (
         xl: 1030px
 );
@@ -7,3 +6,9 @@ $container-max-widths: (
 // Fonts
 $font-size-base: 1rem;
 $h2-font-size:   $font-size-base * 3;
+
+// Responsive
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+
